Design changes - Popup

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -65,7 +65,7 @@
 
       </script>
 
-      <%= stylesheet_link_tag 'bookreviews.css','font-awesome.css', "facebox.css" %>
+      <%= stylesheet_link_tag 'bookreviews.css','font-awesome.css', "facebox.css", "bookings.css" %>
       <%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min","validation", "facebox.js" %>
 
 
