--- a/app/views/order_receives/index.html.erb
+++ b/app/views/order_receives/index.html.erb
@@ -1,6 +1,7 @@
 <%= javascript_include_tag "jquery.ui.core", "jquery.ui.datepicker.js" %>
 <%= stylesheet_link_tag   "jquery.ui.core", "jquery.ui.theme", "jquery.ui.datepicker"%>
-<%= stylesheet_link_tag 'bookreviews.css','font-awesome.css', "facebox.css" %>
+<%= stylesheet_link_tag 'bookreviews.css','font-awesome.css', "facebox.css", "order_receive" %>
+
 
 <script type="text/javascript">
 
