--- a/app/views/bookings/rating.html.erb
+++ b/app/views/bookings/rating.html.erb
@@ -4,60 +4,10 @@ input[type="checkbox"]:not(old) + label, input[type="radio"]:not(old) + label { 
 
 </style>
 
-<style>
+<%= stylesheet_link_tag "booking_popup.css" %>
 
-.boxpop-up
-{
-width:380px;
-
-background:#FFF;
-/*border:1px #eeeeee solid;*/ 
-
-}
-.booking-btn{
-    background: none repeat scroll 0 0 #00b4ff;
-    border: 2px solid #00b4ff;
-    color: #ffffff;
-    font-family: brandon4;
-    font-size: 15px;
-    margin-left: 183px;
-    margin-top: 30px;
-    padding: 0;
-    text-align: center;
-    width: 50%;
-    }
-.bookingg-btn {
-text-decoration:none;
- color:#ffffff;
-  }
-  
-.paragraph-new
-{
-width:86%;  
-font-size:11px;
-color:#b0b4b8;
-margin-top:50px;
-padding-left:20px;  
-  }
-.heading {
-    color: #14263a;
-    font-family: brandon4;
-    padding-left: 20px;
-    padding-top: 30px;
-}
-
-#facebox .content {
-    background: none repeat scroll 0 0 #fff;
-    border-radius: 4px;
-    display: table;
-    height: 330px;
-    padding: 10px;
-    width: 100%;
-}
-
-</style>
 <div class="content"> 
-<%#= stylesheet_link_tag 'bookreviews.css','font-awesome.css' %>
+
 <div class="boxpop-up">
   <div class="heading">Rate</div>
     <div class="paragraph-new">
