--- a/app/views/disputes/search.html.erb
+++ b/app/views/disputes/search.html.erb
@@ -26,3 +26,6 @@
   <%= render 'search_result', :index => index, :booking => booking %>
 <%end%> 
 </table>
+<% unless params[:search] %>
+<%= will_paginate @bookings %>
+<% end %>
