Existing email id issue in facebook functionality

--- a/app/views/home/_home_script.html.erb
+++ b/app/views/home/_home_script.html.erb
@@ -57,7 +57,7 @@
 			var dataString = 'email='+ email;
 			 $.ajax({
 					type: "GET",
-					url: "<%= check_email_authenticates_path %>?email=" + dataString,
+					url: "<%= check_email_authenticates_path %>",
 					data: dataString,
 					 success: function(response){
    						if (response){
