--- a/app/views/posts/_overviews.html.erb
+++ b/app/views/posts/_overviews.html.erb
@@ -34,7 +34,7 @@
                     <span>&nbsp;</span>
                   <% end %>
           <span style="font-size:10px; color:#999;"> 
-            <% if current_user.provider.present? &&  post.user_provider.present? && post.user_id != current_user.id %>(<%= mutual_friend_list(post.user.id) rescue nil%> mutual friends)
+            <% if current_user.provider.present? &&  post.user_provider.present? && post.user_id != current_user.id %>(<%= mutual_friend_list(post.user_id) rescue nil%> mutual friends)
             <% end %>
           </span>
            <div class="month"> <%= post.drop_off_avaibility_start_date.strftime("%B %e") %> -  <%= post.drop_off_avaibility_end_date.strftime("%B %e") %> 
