--- a/app/views/bank_details/_form.html.erb
+++ b/app/views/bank_details/_form.html.erb
@@ -1,102 +1,10 @@
+<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
-
-<%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min" %>
-
- <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-
- <script type="text/javascript">
-    Stripe.setPublishableKey('pk_test_17xmTuMVQ5oVgcT0AWY6XcNo');
-   $(document).ready(function() {
-
-    function addInputNames() {
-    // Not ideal, but jQuery's validate plugin requires fields to have names
-    // so we add them at the last possible minute, in case any javascript
-    // exceptions have caused other parts of the script to fail.
-      $(".card_number").attr("name", "card_number")
-      $(".card_code").attr("name", "card_code")
-      $(".card_year").attr("name", "card_year")
-    }
- 
-    function removeInputNames() {
-      $(".card_number").removeAttr("name")
-      $(".card_code").removeAttr("name")
-      $(".card_year").removeAttr("name")
-      }
- 
-      function submit(form) {
-      // remove the input field names for security
-      // we do this *before* anything else which might throw an exception
-      removeInputNames(); // THIS IS IMPORTANT!
-     
-      // given a valid form, submit the payment details to stripe
-      // https://stripe.com/docs/testing
-      $(form['submit-button']).attr("disabled", "disabled")
-     
-        Stripe.createToken({
-        number: $('.card_number').val(),
-        cvc: $('.card_code').val(),
-        exp_month: $('.card-expiry-month').val(),
-        exp_year: $('.card-expiry-year').val()
-        }, function(status, response) {
-        if (response.error) {
-        // re-enable the submit button
-        $(form['submit-button']).removeAttr("disabled")
-        // show the error
-        $(".payment-errors").html(response.error.message);
-        // we add these names back in so we can revalidate properly
-        addInputNames();
-        } else {
-        // token contains id, last4, and card type
-        var token = response['id'];
-     
-        // insert the stripe token
-        var input = $("<input name='stripe_card_token' value='" + token + "' style='display:none;' />");
-        form.appendChild(input[0])
-     
-          // and submit
-      form.submit();
-        }
-      });
-       return false;
-      }
-      // add custom rules for credit card validating
-      jQuery.validator.addMethod("cardNumber", Stripe.validateCardNumber, "Please re-enter number");
-      jQuery.validator.addMethod("cardCVC", Stripe.validateCVC, "Please re-enter CVV");
-      jQuery.validator.addMethod("cardExpiry", function() {
-      return Stripe.validateExpiry($(".card-expiry-month").val(),
-      $(".card-expiry-year").val())
-      }, "Please enter a valid expiration");
- 
-      // We use the jQuery validate plugin to validate required params on submit
-      $("#new_bank_detail").validate({
-        submitHandler: submit,
-        rules: {
-        "card_code" : {
-          cardCVC: true,
-          required: true
-        },
-      "bank_detail[full_name]":{
-         required:true
-        },
-        "card_number" : {
-          cardNumber: true,
-          required: true
-        },
-        "card-expiry-year" : "cardExpiry" // we don't validate month separately
-        }
-
-        });
- 
-        // adding the input field names is the last step, in case an earlier step errors
-       addInputNames();
-  });
-</script>
-
-
+<%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min", "stripe_validation.js" %>
 
                              
-    <div class="main-new">
-            <ul class="verticle-menu">
+<div class="main-new">
+  <ul class="verticle-menu">
     <li><%= link_to "Personal Information", edit_user_path(current_user) %></li>
     <li><%= link_to "Change Password", edit_user_registration_path %></li>
     <li class="active"><%= link_to "Bank Details",bank_details_path %></li>
@@ -116,7 +24,6 @@
 
  <%= form_for(bank_detail, :html=>{ id: "new_bank_detail" }) do |f| %>   
   
-
       <%= hidden_field_tag :stripe_card_token %>
        <div>Setup a Card to receive payments <span title="This is some information for our tooltip." class="month1 tooltip_new "><img src="/assets/que.png">
            </span></div>
@@ -136,16 +43,16 @@
     <div class="expiry-wrapper">
      <select class="card-expiry-month stripe-sensitive required">
      </select>
-      <script type="text/javascript">
+      <span> / </span>
+      <select class="card-expiry-year stripe-sensitive required"></select>
+
+       <script type="text/javascript">
        var select = $(".card-expiry-month"),
        month = new Date().getMonth() + 1;
        for (var i = 1; i <= 12; i++) {
          select.append($("<option value='"+i+"' "+(month === i ? "selected" : "")+">"+i+"</option>"))
         }
-      </script>
-      <span> / </span>
-      <select class="card-expiry-year stripe-sensitive required"></select>
-      <script type="text/javascript">
+   
         var select = $(".card-expiry-year"),
         year = new Date().getFullYear();
  
@@ -153,6 +60,8 @@
           select.append($("<option value='"+(i + year)+"' "+(i === 0 ? "selected" : "")+">"+(i + year)+"</option>"))
         }
       </script>
+
+
     </div>
 <!-- <button class="blue-btn b-mar" type="button">Save Changes</button> -->
  <noscript>JavaScript is not enabled and is required for this form. First enable it in your web browser settings.</noscript>
