--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,27 +1,17 @@
-      
       <%= render 'booking_script' ,:post => @post%>
-
         <div class="main2">
             <div class="s1">
               <div id="map-canvas"></div>
             </div>
-                 
-                 
-               <div class="s2">
-           
-           <div class="kal">  
+            <div class="s2">
+           <div class="kal">
             <% if @post.photo.url(:medium) == "/photos/medium/missing.png" %>
               <%= image_tag "default_post_large.png", :style => "width:511px" %>
             <% else %>
               <%= image_tag(@post.photo.url(:medium), :style => "width:511px") %>
             <% end %>
-
            </div>
-               <div class="sam"><p class="sq">$<%= @post.price_sq_ft.to_f %>/sq.ft. <span class="sq1">for entire duration</span></p></div>
-                
-                 </div> 
-              
-              
+              <div class="sam"><p class="sq">$<%= @post.price_sq_ft.to_f %>/sq.ft. <span class="sq1">for entire duration</span></p></div></div>
                  <div class="s3">
                  <div class="review"><p style="float: left; border-left-width: 0px; padding-left: 0px;">Reviews</p>
                  <div class="star-new" style="float:right; margin: 20px 35px 0 0; font-size:15px; color:#9198a0;">
@@ -35,33 +25,24 @@
                   <% num_stars(@post.overall_rating)[:empty].times do %>
                     <i class="fa fa-star-o"></i>
                   <% end %>
-
                   </div>
                   </div>
-
-
-                    <div class="p1" style="width:480px; margin-left:-3px;" id="ref_comment">  
-                      
+                    <div class="p1" style="width:480px; margin-left:-3px;" id="ref_comment">
                     </div>
-            
                  </div>
-                  
                  <div class="s4">
                   <div class="ami">
                    <p class="ami1"><%= @post.user_name.capitalize rescue nil%> <%= @post.user_last_name[0,1] rescue nil %> <strong style="font-size:10px;"><% if current_user.provider.present? &&  @post.user_provider.present? && @post.user_id != current_user.id %>(<%= mutual_friend_list(@post.user_id) rescue nil%> mutual friends)<% end %></strong>
-
                    </p>
                    <div class="street">
                      <p><%= @post.address %><br/>
                      <%= @post.street_add %> <%= @post.apt%><br/>
                      <%= @post.city%> <%= @post.state%> <br/>
-                     <%= @post.zip_code%></p> 
+                     <%= @post.zip_code%></p>
                    </div>
-                      
                    <div id="message_<%= @post.id %>">
                     <%= link_to "Message ", compose_message_messages_path(:user_id => @post.user_id,:post_id => @post.id ), :remote=>true, :class=>"sms_btn" %>
                    </div>
-
                    <p class="sed2" style="line-height:12px; width: 375px;"><%= @post.additional_comments %></p>
                   <input type='hidden' name='price' id='price' value='<%= @post.price_sq_ft %>' />
                    <input type='hidden' name='dropoff' id='dropoff' value='<%= @post.price_include_drop_off ? @post.price_include_drop_off : 0 %>' />
@@ -76,42 +57,31 @@
               <div class="function">
                 <div class="form-group" id="postdetailsErr"></div>
                 <div class="f1">
-                
                       <div class="f1_tool" style="margin-top:20px;">Area needed <a class="tooltip10" href="#" style="color:#999; text-decoration:none;">
-                      
                          <div id="cf2">
                   <img class="bottom" src="/assets/queh.png" />
                   <img class="top" src="/assets/que.png" />
                     </div>
-                      
-                      
                       <span class="classic10"> This is just an example of what  </span> </a></div>
                      <p class="sed">How to estimate :<br>
                      4 feet x 5 feet = 20 sq. feet</p><div class="clear"></div>
                      <div class="styleSelect1">
-
-                      <%= text_field_tag :area, nil, "maxlength"=>"3", :class=>"units" %> 
-                   
-                     </div> 
+                      <%= text_field_tag :area, nil, "maxlength"=>"3", :class=>"units" %>
+                     </div>
                      <p class="miles3"> <%= @post.area_available.to_i %> sq. feet available</p>
                    <p class="sed" style="float:right; margin:-36px -4px 0 20px;">x $<%= @post.price_sq_ft %><span style="margin:0 0 0 25px; font-size:14px;" id="area_needed"> $0</span></p>
                 </div>
                 <div class="f1">
-                      <div class="f1_tool" style="margin-top:10px; ">Drop-off date <a class="tooltip10" href="#" style="color:#999; ">
+                      <div class="f1_tool" style="margin-top:10px; ">Drop-off date <a class="tooltip10" href="#" style="color:#999;">
                    <div id="cf2" style="margin-left:78px;">
-                  <img class="bottom" src="/assets/queh.png" />
+                  <img class="bottom" src="/assets/queh.png"/>
                   <img class="top" src="/assets/que.png" />
                     </div>
-                      
-                      
                     <span class= "classic10"> Ride for drop off is $5 <u>learn_More</u> </span> </a></div>
                       <div class="drop_off_date dates" style="margin-top:-10px;">
-                        
                         <%= f.text_field :dropoff_date, :readonly=>true, :style=>"width: 29px;" %>
                       </div>
-
                       <p class="miles3" style="padding-left:7px;"> <%= @post.drop_off_avaibility_start_date.strftime("%b %e") %> -  <%= @post.drop_off_avaibility_end_date.strftime("%b %e") %></p>
-
                    <p class="sed" style="float:right; margin:-32px -2px 0 0px;">-</p>
                 </div>
                 <div class="f1">
@@ -120,11 +90,8 @@
                       <img class="bottom" src="/assets/queh.png" />
                       <img class="top" src="/assets/que.png" />
                     </div>
-                      
-                      
                       <span class= "classic10"> Ride for drop off is $<%= @post.price_include_drop_off ? @post.price_include_drop_off.to_i : 0 %> <u>learn_More</u> </span> </a></div>
-                 
-                  <% if @post.drop_off == true %> 
+                  <% if @post.drop_off == true %>
                     <div class="pickup3" style="margin:-20px 0 0 212px">
                       <input type="checkbox" id="checkbox1" />
                       <label for="checkbox1">&nbsp;</label>
@@ -141,24 +108,15 @@
 
                 </div>
                 <div class="f1">
-                      <div class="f1_tool">Tentative pick-up date <a class="tooltip10" href="#" style="color:#999; text-decoration:none;"> 
+                      <div class="f1_tool">Tentative pick-up date <a class="tooltip10" href="#" style="color:#999; text-decoration:none;">
                       <div id="cf2" style="margin-left:123px;">
                   <img class="bottom" src="/assets/queh.png" />
                   <img class="top" src="/assets/que.png" />
                     </div>
-                     
-                      
-                      
                       <span class="classic10"> This is just an example of what  </span> </a></div>
-                 
-
                        <div class="drop_off_date dates" style="margin-top:-23px;">
                         <%= f.text_field :pickup_date, :readonly=>true, :style=>"width: 29px;" %>
-
                       </div>
-
-                     
-
                      <p class="miles3" style="padding-left:10px;"> <%= @post.pick_up_avaibilty_start_date.strftime("%b %e") %> - <%= @post.pick_up_avaibility_end_date.strftime("%b %e") %></p>
                    <p class="sed" style="float:right; margin:-32px -2px 0 0px;">-</p>
                 </div>
@@ -168,17 +126,12 @@
                   <img class="bottom" src="/assets/queh.png" />
                   <img class="top" src="/assets/que.png" />
                     </div>
-                      
                       <span class="classic10">  This is just an example of what  </span> </a></div>
-                      
-                  <% if @post.pick_up == true %> 
-                      
-                 
+                  <% if @post.pick_up == true %>
                      <div class="pickup3" style="margin:-20px 0 0 212px">
                       <input type="checkbox" id="checkbox2" />
                       <label for="checkbox2">&nbsp;</label>
                      </div>
-                    
                     <p class="miles3" style="padding-left:60px;"> $<%= @post.price_include_pick_up ? @post.price_include_pick_up.to_i : 0 %></p>
                     <p class="sed" style="float:right; margin:-32px -2px 0 30px; font-size:14px;" id="check_pickup">$0</p>
                   <% else %>
@@ -186,20 +139,14 @@
                       <p> Unavailable</p>
                       <p class="miles3" style="padding-left: 60px;"></p>
                     </div>
-
                     <p class="sed" style="float:right; margin:-32px -2px 0 30px; font-size:14px;" id="check_pickup">-</p>
                   <% end %>
-
                 </div>
            </div>
-           
-
             <div class="square_btn">
               <%= f.submit "Book", :class => "book", :id=>"customButton", :disabled=> true %>
               <div class="total"> Total <strong style="margin-left:10px;" id="total"> </strong></div>
             </div>
-
-
                <input type="hidden" name="dropoff_price" id="dropoff_price" value=""/>
                <input type="hidden" name="pickup_price" id="pickup_price" value=""/>
                <input type="hidden" name="totalPrice" id="totalPrice" value=""/>
@@ -229,9 +176,7 @@
                </script>
 
             <div class="clear"></div>
-           <% end %>             
-                    
+           <% end %>
       </div>
         </div>
-                    
 </div><!-- -----------------main------------------------- -->
