--- a/app/views/messages/compose_message.html.erb
+++ b/app/views/messages/compose_message.html.erb
@@ -1,83 +1,5 @@
 <%= javascript_include_tag "validation" %>
-
-<style>
-
-.boxpop-up
-{
-  width:380px;
-  background:#FFF;
-}
-.booking-btn{
-  background: #00b4ff;
-  padding:2px 10px 8px;
-  font-size:15px; 
-  text-align:center;  
-  font-family:brandon4;
-  width:50%;
-  margin-left:171px;
-  margin-top:30px;
-  border:2px #00b4ff solid;
-  color:#ffffff;
-  cursor:pointer;
-  
-    }
-.booking-btn a{
-text-decoration:none;
- color:#ffffff;
-  }
-.alredy-btn{
-  background: #ffffff;
-  padding:10px 10px 8px;
-  font-size:15px; 
-  text-align:center;  
-  font-family:brandon4;
-  width:50%;
-  margin-left:140px;
-  margin-top:30px;
-  border:2px #ccc solid;
-    }
-.alredy-btn a{
-text-decoration:none;
- color:#00b4ff;
-  } 
-   
-.link-more a
-{
-text-decoration:none;
-color:#00b4ff;
-font-size:12px; 
-padding-left:20px;
-  }
-  
-.paragraph-new { width:86%;   
-  font-size:11px; 
-  color:#b0b4b8; 
-  margin-top:50px;
-  padding-left:20px;    
-} 
-
-.heading { padding-left:20px; 
-  color:#14263a; 
-  padding-top:25px; 
-  font-family: brandon4;
-  margin-top:0px;       
-} 
-.cancel-btn{margin-top:6px} 
-
-.cancel-btn a 
-{
-text-decoration:none;
-padding-top:13px;
-color:#ccc; 
-font-size:12px;
-margin-left:329px;
-font-family: brandon4;
-
-}
-
-  
-</style>
-
+<%= stylesheet_link_tag 'compose_message' %>
 <div class="content">
   <div class="boxpop-up">
     <div class="heading"><%= @user.name.capitalize rescue nil%> <%= @user.last_name[0,1] rescue nil %></div>
@@ -85,7 +7,6 @@ font-family: brandon4;
       <% if @message.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@message.errors.count, "error") %> prohibited this message from being saved:</h2>
-
           <ul>
           <% @message.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
@@ -94,13 +15,10 @@ font-family: brandon4;
         </div>
       <% end %>
       <div class="row">
-
         <%= f.hidden_field :recipient_id, :value =>@user.id %>
         <%= f.hidden_field :sender_id, :value =>current_user.id %>
         <%= f.hidden_field :post_id, :value =>params[:post_id] %>
-
       </div>
-     
       <div class="paragraph-new">
         <%= f.text_area :body ,:class => "text_area" ,:style => "width:338px; border: 2px solid #eee font-family: brandon4;" ,:rows => "5"%>
       </div>
