--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,5 @@
 		<div class="main-new">
             <ul class="verticle-menu">
-	         
 	            <li><%= link_to "Personal Information", edit_user_path(current_user) %></li>
 	            <li><%= link_to "Change Password", edit_user_registration_path %></li>
 	            <li><%= link_to "Bank Details",bank_details_path %></li>
@@ -8,20 +7,15 @@
 	            <li><%= link_to "My Order/Received",order_receives_path%></li>
 	            <li><%= link_to "My Booking", bookings_path%></li>
 	            <li><%= link_to "Payment", payments_path%></li>
-
 	            <li class="active"><%= link_to("<span></span>".html_safe + "Message", {:controller => '/messages',:action => 'is_read_all', :id =>current_user.id,:method => :post}) %> </li>
-                
             </ul>
-            
             <div class="chat-wrap">
-                
 	            <div id="user_msg"></div>
-	            <%unless params[:recv_id].present?%> 
+	            <%unless params[:recv_id].present?%>
 	              <div class="chatdiv" style="height:460px;">
 	              	<div class="content">
-			            <div id="refresh_msg"></div>
+			           <div id="refresh_msg"></div>
 		            </div>
-		            
 	              </div>
 	            <%else%>
 	              <div class="chatdiv">
@@ -36,69 +30,21 @@
 		            	<%= render 'reply', :message => @message %>
 		            </div>
 	            <%end%>
-	            
             </div>
-            
         </div>
-
-
-
         <!-- custom scrollbar plugin -->
     <%= stylesheet_link_tag  'scroll', "jquery.mCustomScrollbar" %>
-    <%= javascript_include_tag "bootstrap.min", "jquery.mCustomScrollbar.concat.min", "scrollbar.js" %>
-	
+    <%= javascript_include_tag "bootstrap.min", "jquery.mCustomScrollbar.concat.min", "scrollbar.js", "active_textarea" %>
 	
 	<script>
-
-	jQuery(document).ready(function() {
-		
-
-
-		jQuery('#submit_msg').click(function() {
-			var text_title = this.form.message_body.value;
-			if(text_title != ''){
-				$("#reply_message").submit();
-				$("#message_body").val('');
-				$(".content").mCustomScrollbar("scrollTo", "bottom");
-			}
-		});
-
-    	jQuery("#message_body").keyup(function (e) {
-
-        var code = (e.keyCode ? e.keyCode : e.which);
-        
-        var text_title = this.form.message_body.value;
-	      
-		   if(text_title != ''){
-
-		      jQuery('input[type="button"]').addClass('msg_active');
-
-		      if (code == 13) {
-	        	$("#reply_message").submit();
-	        	$("#message_body").val('');	
-	        	$(".content").mCustomScrollbar("scrollTo", "bottom");
-	            return true;
-	         }
-		   } 
-		   if(text_title == '')
-			{
-				jQuery('input[type="button"]').removeClass('msg_active');
-			}
-
-		});
-
-    	
-	});
-
 	<% if @messages_receiver.empty? %>
     	var refreshId = setInterval(function()
 		{
     	 	jQuery.ajax({
             url: '<%= check_message_messages_path %>', cache: false,
-                  success: function(html) { }
-        	}); 
+               success: function(html) { }
+        	});
         }, 1000);
-    
     <% end %>
 
 	var refreshId = setInterval(function()
@@ -106,14 +52,11 @@
 		jQuery.ajax({
             url: '<%= refresh_part_messages_path(:restream=>"yes") %>', cache: false,
                   success: function(html) { }
-        }); 
-	     
+        });
 	}, 2000);
 
 	jQuery(document).ready(function() {
-
 		jQuery("#refresh_msg").load('<%= refresh_message_messages_path(:recv_id=>"#{params[:recv_id]}") %>');
-		
 	});
 
 	var refresmsg_hId = setInterval(function()
@@ -122,19 +65,15 @@
             url: '<%= refresh_message_messages_path(:recv_id=>"#{params[:recv_id]}", :restream=>"yes") %>', cache: false,
                   success: function(html) { }
         });
-	     
 	}, 1000);
 
 	
 	jQuery(document).ready(function() {
 		jQuery("#user_msg").load('<%= user_message_messages_path(:recv_id=>"#{params[:recv_id]}") %>');
-		
 	});
 
 	var refresmsg_hId = setInterval(function()
 	{
 	     jQuery('#user_msg').load('<%= user_message_messages_path(:recv_id=>"#{params[:recv_id]}")%>');
 	}, 2000);
-
-	
-</script>
+	</script>
