--- a/app/views/home/all_postings.html.erb
+++ b/app/views/home/all_postings.html.erb
@@ -1,17 +1,5 @@
 
-  <script type="text/javascript">
-
-    jQuery(function($){
-      $("#start_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false,showOn: 'button', buttonImage: 'http://jqueryui.com/resources/demos/datepicker/images/calendar.gif', buttonImageOnly: true})
-
-    });
-    jQuery(function($){
-      $("#end_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, showOn: 'button', buttonImage: 'http://jqueryui.com/resources/demos/datepicker/images/calendar.gif', buttonImageOnly: true})
-    });
-
-
-  </script>
-  <%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","admin_validation" %>
+<%= javascript_include_tag "select_date", "jquery-1.4.2.min","jquery.validate.min","admin_validation" %>
 <h4>Search by</h4>
   <%= form_tag search_post_path,:method=> :get, :id=>"admin_posts" do %>
   <%= hidden_field_tag :q, params[:q] %>
