--- a/app/views/home/searching.html.erb
+++ b/app/views/home/searching.html.erb
@@ -1,16 +1,5 @@
+<%= javascript_include_tag "select_date" %>
 
-  <script type="text/javascript">
-
-    jQuery(function($){
-      $("#start_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false,showOn: 'button', buttonImage: 'http://jqueryui.com/resources/demos/datepicker/images/calendar.gif', buttonImageOnly: true})
-
-    });
-    jQuery(function($){
-      $("#end_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, showOn: 'button', buttonImage: 'http://jqueryui.com/resources/demos/datepicker/images/calendar.gif', buttonImageOnly: true})
-    });
-
-
-  </script>
 <h4>Search by</h4>
 
 <div style="min-height:350px;">
