--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,16 +1,5 @@
-<%= javascript_include_tag "jquery.ui.core", "jquery.ui.datepicker.js" %>
+<%= javascript_include_tag "jquery.ui.core", "jquery.ui.datepicker.js", "select_date" %>
 <%= stylesheet_link_tag   "jquery.ui.core", "jquery.ui.theme", "jquery.ui.datepicker", "bookings.css" %>
-
-<script type="text/javascript">
-
-    jQuery(function($){
-      $("#start_date").datepicker({dateFormat: 'M d, yy ',changeMonth: false,changeYear: false,showOn: 'button', buttonImage: '/assets/cal_icon2.png', buttonImageOnly: true})
-
-    });
-    jQuery(function($){
-      $("#end_date").datepicker({dateFormat: 'M d, yy ',changeMonth: false,changeYear: false, showOn: 'button', buttonImage: '/assets/cal_icon2.png', buttonImageOnly: true})
-    });
-</script>
 
 <script>
 
