--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,70 +1,16 @@
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-    <script>
-      function initialize() {
+<%= javascript_include_tag "post_on_map" %>
+  <script>
+    postOnMap(<%= @post.latitude %>, <%= @post.longitude %>, 'small-map-canvas')
 
-        // Create an array of styles.
-        var styles = [
-          {
-            stylers: [
-              { hue: "#00b4ff" },
-              { saturation: 50 }
-            ]
-          },{
-            featureType: "road",
-            elementType: "geometry",
-            stylers: [
-              { hue: "#28A0E5" },
-              { visibility: "simplified" }
-            ]
-          },{
-            featureType: "road",
-            elementType: "labels",
-            stylers: [
-              { visibility: "off" }
-            ]
-          }
-        ];
-
-        // Create a new StyledMapType object, passing it the array of styles,
-        // as well as the name to be displayed on the map type control.
-        var styledMap = new google.maps.StyledMapType(styles, {name: "Styled Map"});
-
-        var myLatlng = new google.maps.LatLng(<%= @post.latitude %>,<%= @post.longitude %>);
-        var mapOptions = {
-          zoom: 8,
-          center: myLatlng,
-          panControl: true,
-          zoomControl: true,
-          disableDefaultUI: true
-        }
-
-          var map = new google.maps.Map(document.getElementById('small-map-canvas'), mapOptions);
-
-          var marker = new google.maps.Marker({
-              position: myLatlng,
-              map: map,
-              icon: "/assets/marker.png"
-
-          });
-
-          //Associate the styled map with the MapTypeId and set it to display.
-          map.mapTypes.set('map_style', styledMap);
-          map.setMapTypeId('map_style');
-
-      }
-
-
-
-      google.maps.event.addDomListener(window, 'load', initialize);
-
-      jQuery(document).ready(function(){
+    jQuery(document).ready(function(){
         $("#ref_comment").load('<%= books_comments_path(:post_id => @post.id) %>');
-      });//]]>
+    });//]]>
+  </script>
 
-      </script>
+<%= stylesheet_link_tag 'bookreviews.css','font-awesome.css', "facebox.css", "bookings.css" %>
+<%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min","validation", "facebox.js" %>
 
-      <%= stylesheet_link_tag 'bookreviews.css','font-awesome.css', "facebox.css", "bookings.css" %>
-      <%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min","validation", "facebox.js" %>
 <div class="main-new">
             <ul class="verticle-menu">
              <li><%= link_to "Personal Information", edit_user_path(current_user) %></li>
