--- a/app/views/home/search_post.html.erb
+++ b/app/views/home/search_post.html.erb
@@ -1,11 +1,4 @@
-<script type="text/javascript">
-    jQuery(function($){
-      $("#start_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false,showOn: 'button', buttonImage: 'http://jqueryui.com/resources/demos/datepicker/images/calendar.gif', buttonImageOnly: true}) });
-    jQuery(function($){
-      $("#end_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, showOn: 'button', buttonImage: 'http://jqueryui.com/resources/demos/datepicker/images/calendar.gif', buttonImageOnly: true}) });
-  </script>
-
-<%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min","admin_validation" %>
+<%= javascript_include_tag "select_date", "jquery-1.7.0.min","jquery.validate.min","admin_validation" %>
 
 <%if @start_date > @end_date %>
 
