Message send to help@dinobo.com

--- a/app/views/about_us/show.html.erb
+++ b/app/views/about_us/show.html.erb
@@ -5,5 +5,5 @@
   <%= @about_u.content %>
 </p>
  <%= image_tag(@about_u.photo.url(:medium)) %>
-<%= link_to 'Edit', edit_about_u_path(@about_u) %> |
+<%= link_to 'Edit', edit_about_u_path %> |
 <%= link_to 'Back', about_us_path %>
