--- a/app/views/contactus_mailer/contactus.text.erb
+++ b/app/views/contactus_mailer/contactus.text.erb
@@ -1,8 +1,2 @@
-<p>
-  <%= @greeting %>
-</p>
-
-<p><%=@contactus.name%></p>
-<p><%=@contactus.email%></p>
-<p><%=@contactus.subject%></p>
-<p><%=@contactus.message%></p>
+<p>Topic : <%=@contactus[0]%></p>
+<p>Message : <%=@contactus[1]%></p>
