see preview for About us post

--- a/app/views/about_us/show.html.erb
+++ b/app/views/about_us/show.html.erb
@@ -4,6 +4,6 @@
   <strong>Content:</strong>
   <%= @about_u.content %>
 </p>
- <%= image_tag(@about_u.photo.url(:medium)) %>
+ <%= image_tag(@about_u.photo.url) %>
 <%= link_to 'Edit', edit_about_u_path %> |
 <%= link_to 'Back', about_us_path %>
