--- a/app/views/about_us/_form.html.erb
+++ b/app/views/about_us/_form.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
       <%= f.label :name %>
-      <%= f.text_field :name %>
+      <%= f.text_field :name, :maxlength => 100 %>
   </div>
 
   <div class="field">
