--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -38,16 +38,16 @@
                         <%= f.email_field :email, :disabled => true,:style => "font-family: brandon4;", :placeholder=>"Email" %>
                       </div>
                       <div input id="password">
-                        <%= f.text_field :name,:style => "font-family: brandon4;", :placeholder=> "First Name" %>
+                        <%= f.text_field :name,:style => "font-family: brandon4;", :placeholder=> "First Name",:maxlength => 50 %>
                       </div>
                       <div input id="password">
-                        <%= f.text_field :last_name, :style => "font-family: brandon4;",:placeholder=> "Last Name" %>
+                        <%= f.text_field :last_name, :style => "font-family: brandon4;",:placeholder=> "Last Name" ,:maxlength => 50 %>
                       </div>
                       <div input id="password">
-                        <%= f.text_field :personal_email, :style => "font-family: brandon4;",:placeholder=> "Personal Email" %>
+                        <%= f.text_field :personal_email, :style => "font-family: brandon4;",:placeholder=> "Personal Email",:maxlength => 100 %>
                       </div>
                       <div input id="password">
-                        <%= f.text_field :mobile_number, :style => "font-family: brandon4;",placeholder:"xxx xxx-xxxx"%>
+                        <%= f.text_field :mobile_number, :style => "font-family: brandon4;",placeholder:"xxx xxx-xxxx", :maxlength => 10 %>
                       </div>
                   </fieldset>
                      <div class="pickup4">
