selected datepicker bug- admin side

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "jquery.fancybox.pack.js" %>
+<%= javascript_include_tag "jquery.fancybox.pack.js", "select_admin_date" %>
 
 <%= stylesheet_link_tag "jquery.fancybox.css"%>
 
