--- a/app/views/payement_transfers/_selectdate.html.erb
+++ b/app/views/payement_transfers/_selectdate.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "select_date", "jquery-1.7.0.min","jquery.validate.min","admin_validation"  %>
+<%= javascript_include_tag "select_admin_date", "jquery-1.7.0.min","jquery.validate.min","admin_validation"  %>
 <h4>Search by</h4>
   <%= form_tag search_payments_path,:method=> :get, :id=>"admin_posts" do %>
   <%= hidden_field_tag :q, params[:q] %>
