mobile number updated

--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -12,7 +12,7 @@
 	<th>Personal Email</th> <td><%= @user.personal_email %></td>
 </tr>
 <tr>
-	<th>Mobile Number</th> <td><%= @user.mobile_no %></td>
+	<th>Mobile Number</th> <td><%= @user.mobile_number %></td>
 </tr>
 <tr>
 	<th>A/C Creation Date</th> <td><%= @user.created_at.to_date rescue nil%></td>
