select date in admin side

--- a/app/views/home/search_post.html.erb
+++ b/app/views/home/search_post.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "select_date", "jquery-1.7.0.min","jquery.validate.min","admin_validation" %>
+<%= javascript_include_tag "select_admin_date", "jquery-1.7.0.min","jquery.validate.min","admin_validation" %>
 
 <%if @start_date > @end_date %>
 
