datepicker validation bug

--- a/app/views/posts/_booking_script.html.erb
+++ b/app/views/posts/_booking_script.html.erb
@@ -4,7 +4,7 @@
      postOnMap(<%= post.latitude %>, <%= post.longitude %>, 'map-canvas')
   </script>
 <%= stylesheet_link_tag 'bookreviews.css','font-awesome.css', "facebox.css", "jquery.ui.core", "jquery.ui.theme", "jquery.ui.datepicker" %>
-<%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min","validation", "facebox.js", "jquery.ui.core", "jquery.ui.datepicker.js", "area_needed", "dropoff_and_pickup_date" %>
+<%= javascript_include_tag "jquery-1.7.0.min","jquery.validate.min","validation", "facebox.js", "jquery.ui.core", "jquery.ui.datepicker.js", "area_needed", "datepickervalidation","dropoff_and_pickup_date" %>
 
 <script src="https://checkout.stripe.com/checkout.js"></script>
 
