Searching with empty result

--- a/app/views/posts/_overview_script.html.erb
+++ b/app/views/posts/_overview_script.html.erb
@@ -268,7 +268,7 @@ function readData() {
                           icon: shifter(icons['bar'])
                       });
                     } else {
-                      alert('Geocode was not successful for the following reason: ' + status);
+                      alert('Record not found.');
                     }
                   });
 
