--- a/app/views/messages/_refresh_message.html.erb
+++ b/app/views/messages/_refresh_message.html.erb
@@ -1,16 +1,14 @@
-
-
-
-			<% total_messages.each do |messages|%>
-				<div class="chat">
-	            	<div <% if messages.sender_id == current_user.id %> class="right" <% else %> class="left" <% end %>>
-
-
-	            		<p><%= messages.body %>  <%= link_to "Click to view Post", post_path(messages.post_id) %></p>
-	            		<span><%= messages.created_at.strftime("%e %b %Y %H:%M:%S%p") %></span>
-	            	</div>
-	            </div>
-	        <% end %>
+<% total_messages.each do |message|%>
+  <div class="chat">
+    <div class="<%= message.sender_id == current_user.id ? 'right' : 'left' %>">
+      <p>
+        <%= message.body %>
+        <%= link_to "Click to view Post", post_path(message.post_id) %>
+      </p>
+      <span><%= message.created_at.strftime("%e %b %Y %H:%M:%S%p") %></span>
+    </div>
+  </div>
+<% end %>
 
 
 
