--- a/app/views/messages/refresh_message.js.erb
+++ b/app/views/messages/refresh_message.js.erb
@@ -1,9 +1,7 @@
 <% unless @total_messages.empty? %>
-	
-  jQuery('<%= escape_javascript(render "refresh_message", :total_messages => @total_messages) %>')
-  .appendTo('#refresh_msg')
-  .hide()
-  .fadeIn()	
+
+  jQuery('#refresh_msg')
+  .html('<%= escape_javascript(render "refresh_message", :total_messages => @total_messages) %>')
 
   jQuery(".content").mCustomScrollbar("scrollTo", "bottom");
 <% end %>
