Change 'from' email for support emails.

--- a/app/views/booked_mailer/booked_a_spaces.pdf.erb
+++ b/app/views/booked_mailer/booked_a_spaces.pdf.erb
@@ -14,7 +14,7 @@
       <h1>Invoice</h1>
       <div id="company" class="clearfix">
         <div>www.dinobo.com</div>
-        <div><a href="mailto:help@dinobo.com">help@dinobo.com</a></div>
+        <div><a href="mailto:support@dinobo.com">support@dinobo.com</a></div>
       </div>
       <div id="project">
         <div><span>CLIENT</span> <%= @booking.user_name %> <%= @booking.user_last_name %></div>
