--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -23,7 +23,7 @@
                 <%= f.submit "Submit", :class => "submit button"%><br>
                 <% end %>
 
-            <div class="help" style="margin-width: 268px;">help@dinobo.com </div>
+            <div class="help" style="margin-width: 268px;">support@dinobo.com </div>
              </div>
 
                </div>
